force-app/main/default/objects/Purchase_Order_Recommendation_Line__c/Purchase_Order_Recommendation_Line__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Recommendation Line</label>
    <nameField>
        <displayFormat>PORL - {00000}</displayFormat>
        <label>Purchase Order Recommendation Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Recommendation Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>