force-app/main/default/objects/Purchase_Order_Recommendation_Line__c/fields/Purchase_Order_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Recommendation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Recommendation</label>
    <referenceTo>Purchase_Order_Recommendation__c</referenceTo>
    <relationshipLabel>Purchase Order Recommendation Lines</relationshipLabel>
    <relationshipName>Purchase_Order_Recommendation_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>