force-app/main/default/objects/Purchase_Order_Recommendation_Line__c/fields/Recommended_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Quantity__c</fullName>
    <label>Recommended Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>