force-app/main/default/objects/Purchase_Order_Recommendation_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recommended_Quantity__c</columns>
    <columns>Product__c</columns>
    <columns>Minimum_Quantity__c</columns>
    <columns>Purchase_Order_Recommendation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>